Fixing bg buttons

--- a/app/views/collectors/index.html.erb
+++ b/app/views/collectors/index.html.erb
@@ -1,6 +1,6 @@
 
 <h1>Promotoras</h1>
-<%= link_to 'Crear Promotora', new_collector_registration_path, class: 'btn btn-lg gold' %>
+<%= link_to 'Crear Promotora', new_collector_path, class: 'btn btn-lg blue' %>
 <br/>
 <br/>
 <div class="portlet box gold">
