--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -36,7 +36,7 @@
             <td><%= link_to entry.customer.name, customer_path(entry.customer) %></td>
         <% end %>
         <td><%= entry.event.name if !nil? %></td>
-        <td><%= entry.collector.email if !nil? %></td>
+        <td><%= entry.collector.name if !nil? %></td>
         <td><%= entry.customer.cocktail unless entry.customer.nil? %></td>
         <td><%= entry.created_at.to_date %></td>
         <% if current_user.email == "melvin@cspmconsulting.com" %>
