--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Eventos</h1>
-<%= link_to 'Crear Evento', new_event_path, class: 'btn btn-lg gold' %>
+<%= link_to 'Crear Evento', new_event_path, class: 'btn btn-lg blue' %>
 <br/>
 <br/>
 <div class="portlet box gold">
