--- a/app/views/front_ends/_welcome.html.erb
+++ b/app/views/front_ends/_welcome.html.erb
@@ -12,7 +12,7 @@
 
             <h3>
               Selecciona las opciones acorde<br>
-              a tus gustos y opten el cocktail<br>
+              a tus gustos y obtén el cocktail<br>
               ideal. 
             </h3>
 
