--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -16,11 +16,13 @@
   <thead>
     <tr>
       <th>#</th>
+      <th>Fecha</th>
       <th>Consumidor</th>
       <th>Evento</th>
       <th>Promotora</th>
-      <th>Cocktail</th>
-      <th>Fecha</th>
+      <th class="blueab">Sabor preferido</th>
+      <th class="blueab">Tipo de trago</th>
+      <th class="blueab">Premio <small>(Cocktail)</small></th>
       <th colspan="2"></th>
 
     </tr>
@@ -30,15 +32,17 @@
     <% @entries.each_with_index do |entry, i| %>
       <tr>
         <td><%= i+1 %></td>
+        <td><%= entry.created_at.to_formatted_s(:short)  %></td>
         <% if entry.customer.nil? %>
-            <td class="gris">SIN DATA</td>
+            <td class="gris">NO CONSUMIDOR</td>
         <% else %>
             <td><%= link_to entry.customer.name, customer_path(entry.customer) %></td>
         <% end %>
         <td><%= entry.event.name if !nil? %></td>
         <td><%= entry.collector.name if !nil? %></td>
-        <td><%= entry.customer.cocktail unless entry.customer.nil? %></td>
-        <td><%= entry.created_at.to_date %></td>
+        <td><%= entry.taste %></td>
+        <td><%= entry.glass  %></td>
+        <td><%= entry.cocktail %></td>
         <% if current_user.email == "melvin@cspmconsulting.com" %>
             <td><%= link_to 'Eliminar', entry, method: :delete, data: { confirm: 'Estas seguro?' } %></td>
         <% end %>
