--- a/app/views/front_ends/_welcome.html.erb
+++ b/app/views/front_ends/_welcome.html.erb
@@ -1,20 +1,19 @@
 <div class="container" id="welcome" style="display: none;">
       <div class="row">
-        <div class="col-sm-7 col-md-offset-5">
+        <div class="col-sm-7 col-md-offset-5 col-sm-offset-5">
           <!-- START -->
           <div class="topmargen">
             <h1 class="text-hide">Absolut Electrik Cocktail Tasting 
               <%= image_tag 'tl-atasting.png', class: 'img-responsive center-block' %></h1>
-            <h3>Presentamos 3 deliciosos <br>
-            cocktails que reflejan el concepto<br>
-            de Absolut Electrik.
+            <div class="width300">
+            <h3>Presentamos 3 deliciosos cocktails que reflejan el concepto de Absolut Electrik.
             </h3>
 
+
             <h3>
-              Selecciona las opciones acorde<br>
-              a tus gustos y obtén el cocktail<br>
-              ideal. 
+              Selecciona las opciones acorde a tus gustos y obtén el cocktail ideal. 
             </h3>
+            </div>
 
             <div class="row contenedor-botones">
               <div class="col-sm-12">
