--- a/app/views/front_ends/start.html.erb
+++ b/app/views/front_ends/start.html.erb
@@ -5,10 +5,11 @@
           <div class="oldgate">
             <%= image_tag 'logo-turn.png', class: 'img-responsive center-block' %>
             <h1 class="text-hide">¿tienes 18 años o mas? <%= image_tag 'tl-edad.png', class: 'img-responsive center-block' %></h1>
-            <p>Al participar aceptas nuestros términos y condiciones, <br>así como nuestra política de privacidad</p>
-
+            <div class="width300">
+            <p>Al participar aceptas nuestros términos y condiciones, así como nuestra política de privacidad</p>
+            </div>
             <div class="row contenedor-botones">
-              <div class="col-sm-6 col-md-offset-3">
+              <div class="col-sm-6 col-md-offset-3 col-sm-offset-3">
                 <%= link_to "Sí", "javascript:;", class: 'btn btn-lg btn-absolut e-yes' %>
       <%= link_to "No", "javascript:;", class: 'btn btn-lg btn-absolut e-no' %>
               </div>
