--- a/app/assets/stylesheets/front_ends.css.scss.erb
+++ b/app/assets/stylesheets/front_ends.css.scss.erb
@@ -28,7 +28,7 @@
 body{
   background-image: url(<%= asset_path("Absolut-App.jpg") %>);
   background-color: black;
-  background-repeat: repeat-x;
+  background-repeat: repeat;
   background-position: top center;
 
   color: white;
@@ -62,6 +62,11 @@ p {
   padding-top: 30px;
 }
 
+.width300{
+  max-width: 350px;
+  margin: 0 auto;
+
+}
 .margen20{
   padding-top: 20px;
 }
@@ -177,12 +182,15 @@ footer{
 }
 
  #club select{
+    -webkit-appearance: none;
     -moz-appearance: none;
     background: #000;
     border: 0;
     box-sizing: border-box;
     height: 42px;
-    min-width: 140px;
+    min-width: 50px;
+    width: 32%;
+    max-width: 90%;
     padding: 5px;
     text-indent: 0.01px;
     text-overflow: "";
@@ -201,4 +209,31 @@ footer{
  .btn-fb{
   padding: 20px;
 
+}
+
+/*TABLETS*/
+@media(max-width:767px) {
+  body.estilo2{
+    background-position: 80%  0%;
+    /*background-image: url(<%= asset_path("fondo-textura.jpg") %>);*/
+  }
+
+}
+
+/*IPHONE*/
+@media(max-width:400px) {
+  h1 {
+  font-weight: 800;
+  font-size: 40px;
+  }
+
+  h3{
+    font-size: 16px;
+  }
+
+p {
+  font-style: normal;
+  font-size: 16px;
+}
+  
 }
