--- a/app/views/front_ends/club.html.erb
+++ b/app/views/front_ends/club.html.erb
@@ -6,7 +6,7 @@
              <%= image_tag 'logo-turn.png', width: 150, class: 'img-responsive center-block' %>
 
             <div class="row contenedor-botones">
-              <div class="col-sm-6 col-sm-offset-3">
+              <div class="col-xs-12 col-sm-6 col-sm-offset-3">
                 <%= image_tag 'tl-club.png', class: 'img-responsive center-block' %>
              
              <br><br> 
