--- a/app/views/front_ends/_cocktail.html.erb
+++ b/app/views/front_ends/_cocktail.html.erb
@@ -24,6 +24,21 @@
                 </div>  
               </div> <!-- Final del Cocktail -->
 
+              <div class="cock-mule" style="display:none;">
+                <div class="col-sm-4 col-xs-6 col-md-3 col-sm-offset-1 col-md-offset-3">
+                  <%= link_to "javascript:;", class: 'seleccion-imagen', id: 's-', value: 'Absolut Mule' do -%>
+                    <%= image_tag 'c-4Mule.png', class: 'img-responsive' -%>
+                  <% end -%>
+                </div>
+
+                <div class="col-xs-6 col-sm-5 col-md-3">
+                  <p>El Cocktail que más se acerca a tu gusto es:</p>
+
+                  <h2 class="margen20"><strong>Absolut Mule</strong></h2>
+                  <p><small>Absolut Vodka / Ginger Beer  / Fresh Lemon Juice</small></p>
+                </div>  
+              </div> <!-- Final del Cocktail -->
+
               <div class="cock-neon" style="display:none;">
                 <div class="col-sm-4 col-xs-6 col-md-3 col-sm-offset-1 col-md-offset-3">
                   <%= link_to "javascript:;", class: 'seleccion-imagen', id: 's-', value: 'Neon Nights' do -%>
@@ -58,7 +73,7 @@ Soda water</small></p>
                 </div>  
               </div> <!-- Final del Cocktail -->
               
-              <div class="col-xs-7 col-md-3 col-sm-offset-4 col-md-offset-4 botonfinal">
+              <div class="col-xs-8 col-md-3 col-xs-offset-5 col-sm-offset-4 col-md-offset-6 botonfinal">
                  <%= form_tag({action: :save_coktail_session}) do %>
                     <%= hidden_field_tag :taste, "" %>
                     <%= hidden_field_tag :glass, "" %>
