--- a/app/views/front_ends/start.html.erb
+++ b/app/views/front_ends/start.html.erb
@@ -79,18 +79,18 @@
 function cocktailresult(sabor, vaso) {
 //Si cumple las condiciones,
 	if (sabor == 'Frutal' && vaso == 'Sparkling' ) {
-		//alert('Lychee Cooler');
+		//alert('Absolut Mule');
 		// Mostrar el Cocktail correspondiente
-		$('.cock-lychee').show();
+		$('.cock-mule').show();
 
 		// Agregar nombre de CK a input hidden.
-		$("input[name=cocktail]").attr('value', 'Lychee Cooler');
+		$("input[name=cocktail]").attr('value', 'Absolut Mule');
 
 	} else if (sabor == 'Agridulce' && vaso == 'Sparkling' ) {
-		//alert('Lychee Cooler');
+		//alert('Absolut Mule');
 		// Mostrar el Cocktail correspondiente
-		$('.cock-lychee').show();
-		$("input[name=cocktail]").attr('value', 'Lychee Cooler');
+		$('.cock-mule').show();
+		$("input[name=cocktail]").attr('value', 'Absolut Mule');
 	
 	} else if ((sabor == 'Agridulce') && vaso == 'Flat' ) {
 		//alert('Electrik Blue');
