adding Ginger Bolt Cocktail

--- a/app/views/front_ends/_cocktail.html.erb
+++ b/app/views/front_ends/_cocktail.html.erb
@@ -26,16 +26,16 @@
 
               <div class="cock-mule" style="display:none;">
                 <div class="col-sm-4 col-xs-6 col-md-3 col-sm-offset-1 col-md-offset-3">
-                  <%= link_to "javascript:;", class: 'seleccion-imagen', id: 's-', value: 'Absolut Mule' do -%>
-                    <%= image_tag 'c-4Mule.png', class: 'img-responsive' -%>
+                  <%= link_to "javascript:;", class: 'seleccion-imagen', id: 's-', value: 'Ginger Bolt' do -%>
+                    <%= image_tag 'c-5Ginger.png', class: 'img-responsive' -%>
                   <% end -%>
                 </div>
 
                 <div class="col-xs-6 col-sm-5 col-md-3">
                   <p>El Cocktail que más se acerca a tu gusto es:</p>
 
-                  <h2 class="margen20"><strong>Absolut Mule</strong></h2>
-                  <p><small>Absolut Vodka / Ginger Beer  / Fresh Lemon Juice</small></p>
+                  <h2 class="margen20"><strong>Ginger Bolt</strong></h2>
+                  <p><small>Absolut Vodka / Lychee liqueur / Lemon Juice / Ginger Syrup / Elderflower Cordial / Simple Syrup</small></p>
                 </div>  
               </div> <!-- Final del Cocktail -->
 
