Fixing validation form

--- a/app/assets/stylesheets/front_ends.css.scss.erb
+++ b/app/assets/stylesheets/front_ends.css.scss.erb
@@ -28,7 +28,7 @@
 body{
   background-image: url(<%= asset_path("Absolut-App.jpg") %>);
   background-color: black;
-  background-repeat: repeat;
+  background-repeat: repeat-x;
   background-position: top center;
 
   color: white;
@@ -199,6 +199,7 @@ footer{
 }
 
 #club .red{ color: red}
+#club label.error{ color: red; font-size: 14px; display: block;}
  input#picture{
   display: block;
   font-size: 16px;
