--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -17,7 +17,7 @@
   </div>
   <div class="field">
     <%= f.label 'Fecha de Nacimiento' %><span class="red">*</span><br>
-    <%= f.date_select :birth,  prompt: { day: 'Día', month: 'Mes', year: 'Año' }, start_year: 1940, end_year: 1999, default: 20.years.from_now,  class: 'chivas-form', required: 'required'  %>
+    <%= f.date_select :birth,  prompt: { day: 'Día', month: 'Mes', year: 'Año' }, start_year: 1940, end_year: 1999,  class: 'chivas-form', required: 'required'  %>
   </div>
   <div class="field">
     <%= f.label 'Ciudad' %><br>
